# nufi-security

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
HANDOVER/: AGENT_OPERATING_MODEL.md  ENGINEERING_CONVENTIONS.md  PROJECT_OVERVIEW.md  PROJECT_STATE.md  README.md
capture/: __init__.py  bypass_monitor.py  content_dump.py  coverage.py  flow_tap.py  targets.py
config/: audit_profiles.yaml  capture_targets.yaml  confidential.yaml  litellm_config.yaml  patterns.yaml  policy.yaml  routing.yaml
dashboards/: README.md  __init__.py  adapter.py  grafana_dashboard.json  server.py  viewer.html
deploy/: .env.example  Dockerfile  README.md  docker-compose.heavy.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CLI.md  CMP-82_NuFi_Egress-Audit_다음단계.md  CMP-84_CPO_verification_transcript.txt  DEMO.md  DEMO_CMP85.md  DEMO_RESULT_CMP85.html  DEMO_RESULT_CMP85.md  DEMO_v0.0.3.md  DEMO_v0.0.5.md  DOC_STYLE.md  ENFORCEMENT_BUILD_CMP94.md  GOVERNANCE_CMP-137_release-mechanics-clause.md  HANDS_ON.md  IMPL_M4.md  INTEGRATION_GUIDE.md  M5_MEASUREMENT_REPORT.md  MANUAL.md  MULTITENANCY.md  OPS_POLICY_AT_SCALE.md  OPS_RULE_RELOAD.md  PRESETS.md  PROPOSAL.md  PROPOSAL_v0.0.2.md  PROPOSAL_v0.0.3.md  PROPOSAL_v0.0.4.md  PROPOSAL_v0.0.5.md  PROPOSAL_v0.0.6.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPORTING.md  ROADMAP.md  SDK.md  SECURITY_RETAIN_RAW_KEYROTATION.md  SPEC.md  SPEC_CMP85.md  SPEC_EGRESS_ENFORCEMENT.md  SPEC_M4.md  STATUS.md
egress_audit/: __init__.py  audit.py  audit_bot.py  checksums.py  edm.py  (+14 more)
(+190 files in other folders)
