[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nufi-egress"
description = "NuFi Egress-Audit Gateway — 온프렘 egress 탐지·집행·감사 통합 CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Dudaji NuFi" }]
# 코어 CLI(render/apply/disable/status/feedback/doctor/coverage/monitor/init/audit)
# 실행에 필요한 최소 런타임 의존성. 게이트웨이/서빙 스택은 [project.optional-dependencies].
dependencies = [
    "PyYAML>=6.0",
    "cryptography>=41.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# 독립 게이트웨이(FastAPI) 구동 시. 코어 CLI 는 이것 없이 동작.
gateway = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
# 설치형 진입점 — `pip install -e .` 후 PATH 에서 직접 실행.
# 레거시 `python3 -m enforcement.cli` 모듈 실행은 하위호환으로 그대로 유지.
nufi-egress = "enforcement.cli:main"
nufi = "enforcement.cli:main"

[tool.setuptools]
# 명시 패키지 목록(자동 디스커버리 누락/오탐 방지 — find_packages 대신 고정).
packages = [
    "enforcement",
    "egress_audit",
    "egress_audit.detectors",
    "capture",
    "dashboards",
    "nufi_client",
    "gateway",
]

[tool.setuptools.dynamic]
# 단일 출처: 루트 VERSION 파일에서 버전 동기화(VERSION/CHANGELOG 정합 가드와 일치).
version = { file = "VERSION" }
